# zfidura_pzawadzki_ROS25L

./: README.md  lecture_1_notes.md  lecture_2_notes.md  lecture_3_notes.md  lecture_4_notes.md  lecture_5_notes.md  lecture_6_instructions.md  lecture_6_notes.md
drawing_shape/: package.xml  setup.cfg  setup.py
drawing_shape/drawing_shape/: drawing_action_server.py  drawing_action_status.py  rviz_marker_example.py
for_kin/: package.xml  setup.cfg  setup.py
for_kin/for_kin/: ForwardKin.py
gripper_ctrl/: package.xml  setup.cfg  setup.py
gripper_ctrl/gripper_ctrl/: diff_kin.py  gripper_client.py  gripper_control.py  inv_kin_tester.py  trajectory_generator.py
install/: local_setup.sh  setup.sh
install/for_kin/lib/for_kin/: ForwardKin
learning_tf2_py/: setup.py
learning_tf2_py/install/: local_setup.sh  setup.sh
learning_tf2_py/log/: latest_build
log/: latest_build
my_urdf_pkg/: CMakeLists.txt  package.xml
my_urdf_pkg/action/: DrawShape.action  MoveP2P.action
my_urdf_pkg/launch/: display.launch.py
my_urdf_pkg/srv/: GripperControl.srv
my_urdf_pkg/urdf/: manipulator_model.urdf  manipulator_model_with_gripper.urdf
p2p_control/: package.xml  setup.cfg  setup.py
p2p_control/p2p_control/: kinematics.py  p2p_client.py  p2p_controller.py  p2p_server.py  trajectory_generator.py
pose_subscriber/: package.xml  setup.py
pose_subscriber/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pose_subscriber/launch/log/: latest_build
pose_subscriber/pose_subscriber/: pose_sub.py  template.py
(+20 files in other folders)
